# kuraryu-kaggle-deep-research

./: .env.example  .gitignore  README.md  pyproject.toml
src/kuraryu_deep_research/: __init__.py  cli.py  config.py
src/kuraryu_deep_research/agents/: __init__.py  research.py  state.py
src/kuraryu_deep_research/tools/: __init__.py  kaggle.py  search.py
